<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/registerAccountBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/mainBlue"
        android:text="@string/registerAccountBtnText"
        app:layout_constraintEnd_toEndOf="@+id/confirmRegisterPasswordEditText"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/confirmRegisterPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/confirmRegisterPasswordEditText" />

    <TextView
        android:id="@+id/registerUserTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/logInTitle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/registerEmailEditTextHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/registerUserTitleTextView"
        app:layout_constraintStart_toStartOf="@+id/registerUserTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/registerUserTitleTextView" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/registerPasswordEditTextHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/registerEmailEditText"
        app:layout_constraintStart_toStartOf="@+id/registerEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailEditText" />

    <EditText
        android:id="@+id/confirmRegisterPasswordEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/confirmRegisterPasswordEditTextHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/registerPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>